--- a/协议.md
+++ b/协议.md
@@ -112,3 +112,15 @@
 > - http1.1：添加了keep-alive长连接，host域等
 >
 > - http2.0：多路复用，头部压缩，服务器推送
+
+#### 8.网络OSI七层模型都有哪些？TCP是属于哪一层的？
+
+> - 七层模型
+>   - 应用层
+>   - 表示层
+>   - 会话层
+>   - 传输层
+>   - 网络层
+>   - 数据链路层
+>   - 物理层
+> - TCP属于传输层
