--- a/前端面试场景题.md
+++ b/前端面试场景题.md
@@ -201,5 +201,28 @@ const _new = function() {
 }
 ```
 
+#### 9.实现数组扁平
+
+```js
+// 使用 concat + 递归 实现
+const flatten = arr => {
+    let result = [];
+    for(let i = 0; i < arr.length; i++) {
+        if(Array.isArray(array[i])) {
+            result = result.concat(flatten(array[i]));
+        } else {
+            result.push(array[i]);
+        }
+    }
+    
+    return result;
+}
+
+// 使用字符串实现
+const flatten = arr => {
+    return arr.toString().split(",").map(item => parseInt(item));
+}
+```
+
 
 
