--- a/协议.md
+++ b/协议.md
@@ -64,7 +64,8 @@
 > 3xx：重定向相关的响应状态码
 >
 > - 301：永久移动。浏览器会自动定向到新的url地址
-> - 302：临时移动。
+> - 302：临时移动。客户端继续使用原有的url
+> - 304：not modified未修改。所请求的资源未修改，服务器返回该状态码时，不会返回任何资源。
 >
 > 4xx：客户端错误相关响应状态码
 >
@@ -89,6 +90,7 @@
 > 5. 服务器收到请求，**返回资源**
 > 6. 浏览器对获取到的资源进行**解析、渲染**
 > 7. 最后浏览器显示页面
+> 8. 断开连接**四次挥手**
 
 #### 5.说一下TCP三次握手？
 
@@ -103,6 +105,8 @@
 > http：无状态无连接，明文传输，不安全。
 >
 > https：传输内容加密，身份验证，保证数据的完整性。
+>
+> https = http + SSL / TLS （安全层）
 
 #### 7.说一下http1.0、http1.1和http2.0的区别？
 
@@ -124,3 +128,12 @@
 >   - 数据链路层
 >   - 物理层
 > - TCP属于传输层
+
+#### 9.说一下为什么握手要三次，挥手要四次？
+
+>
+> 握手之前，还没有进行数据的传输，确保握手就可以了。
+>
+> 挥手之前，正在进行数据的传输，为了确保数据的完整性，必须多经历一次验证（继
+>
+> 续接收）
