--- a/协议.md
+++ b/协议.md
@@ -137,3 +137,15 @@
 > 挥手之前，正在进行数据的传输，为了确保数据的完整性，必须多经历一次验证（继
 >
 > 续接收）
+
+#### 10.怎么封装的axios？
+
+> 1.拿到项目和后端接口，首先要配置全局代理
+>
+> 2.接着全局封装axois和request.js
+>
+> 3.过滤axios请求方式，控制地址，参数格式，http
+>
+> 4.正式封装api.js
+>
+> 5.页面调用
