--- a/浏览器.md
+++ b/浏览器.md
@@ -3,3 +3,15 @@
 #### 1.说一下同源策略？
 
 > 同源策略是浏览器的一种安全策略，所谓同源策略就是**协议**、**域名**、**端口号**完全相同。只有同源的地址才可以相互通过 AJAX 的方式请求。
+
+#### 2.说一下跨域是什么？如何解决跨域？
+
+> 跨域：受浏览器同源策略影响（协议，域名，端口号）中的一个不同时，不能执行其他网站的脚本。
+>
+> 解决方法：
+>
+> - jsonp，只能解决GET请求
+> - node.js中间件
+> - 前端配置proxy代理
+> - 服务器端进行cors配置，原理是设置请求头setHeader(Access-Control-Allow-Origin, '对应的域名')
+> - nginx反向代理
