--- a/前端面试场景题.md
+++ b/前端面试场景题.md
@@ -129,7 +129,7 @@ const _shallowClone = target => {
             }
 ```
 
-#### 7.手写call、apply、bind
+## 7.手写call、apply、bind
 
 主要思路：
 
@@ -184,7 +184,7 @@ Function.prototype._apply = function(context) {
 }
 ```
 
-#### 8.手写new
+## 8.手写new
 
 ```js
 const _new = function() {
@@ -201,7 +201,7 @@ const _new = function() {
 }
 ```
 
-#### 9.实现数组扁平
+## 9.实现数组扁平
 
 ```js
 // 使用 concat + 递归 实现
@@ -224,5 +224,12 @@ const flatten = arr => {
 }
 ```
 
+#### 10.防抖思路和实现
 
-
+> 1.事件函数执行，先创建一个定时器
+>
+> 2.将逻辑代码放到定时器中
+>
+> 3.当函数再次触发，清除定时器
+>
+> 4.创建一个新的定时器即可
