--- a/协议.md
+++ b/协议.md
@@ -92,19 +92,32 @@
 > 7. 最后浏览器显示页面
 > 8. 断开连接**四次挥手**
 
-#### 5.说一下TCP三次握手？
+#### 5.说一下TCP三次握手和四次挥手？
 
-> 第一次握手：由浏览器发给服务器
+> 三次握手：
 >
-> 第二次握手：由服务器发给浏览器
+> - 第一次握手：由浏览器发给服务器
 >
-> 第三次握手：由浏览器发给服务器
+> - 第二次握手：由服务器发给浏览器
+>
+> - 第三次握手：由浏览器发给服务器
+>
+> 四次挥手
+>
+> - 第一次：FIN（由浏览器发给服务器）
+> - 第二次：ACK（由服务器发给浏览器）
+> - 第三次：FIN（由浏览器发给服务器）
+> - 第四次：ACK（由服务器发给浏览器）
 
 #### 6. 说一下http和https的区别？
 
+> 相同点：使用的运输层协议是TCP
+>
 > http：无状态无连接，明文传输，不安全。
 >
 > https：传输内容加密，身份验证，保证数据的完整性。
+>
+> HTTP 和 HTTPS 使用的是完全不同的连接方式，用的端口也不一样，前者是80，后者是443。
 >
 > https = http + SSL / TLS （安全层）
 
@@ -144,8 +157,12 @@
 >
 > 2.接着全局封装axois和request.js
 >
-> 3.过滤axios请求方式，控制地址，参数格式，http
+> 3.过滤axios请求方式，控制地址，参数格式，http等
 >
 > 4.正式封装api.js
 >
 > 5.页面调用
+
+#### 11.说一下TCP和UDP的区别？
+
+> 
