--- a/浏览器.md
+++ b/浏览器.md
@@ -12,6 +12,37 @@
 >
 > - jsonp，只能解决GET请求
 > - node.js中间件
+> - 通过iframe设置document.domain：用于主域名相同，子域名不同
 > - 前端配置proxy代理
 > - 服务器端进行cors配置，原理是设置请求头setHeader(Access-Control-Allow-Origin, '对应的域名')
 > - nginx反向代理
+
+#### 3.说出至少三种减少页面加载时间的方法？
+
+> 尽量减少页面中重复的http请求
+>
+> 压缩合并js、css代码
+>
+> css文件放置在文件的头部，js脚本放置在文件的末尾
+>
+> 服务器开启gzip压缩
+
+#### 4.说一下你对URL的理解？
+
+> URL：统一资源定位符（uniform resource locator，url）
+>
+> url的一般语法为：
+>
+> protocol://host:port/path/[?query]#fragment
+>
+> https://www.baidu:8000/index.html?name=eason&age=21#link
+>
+> | 组成     | 说明                                         |
+> | -------- | -------------------------------------------- |
+> | protocol | 通信协议，常用的为http、ftp、maito等         |
+> | host     | 主机（域名）                                 |
+> | port     | 端口号 可选 省略时使用方案的默认端口号 如:80 |
+> | path     | 路径                                         |
+> | query    | 参数                                         |
+> | fragment | 片段  #后面内容 通常见于连接锚点             |
+>
