--- a/协议.md
+++ b/协议.md
@@ -166,3 +166,14 @@
 #### 11.说一下TCP和UDP的区别？
 
 > 
+
+#### 12.说一下http头都有哪些字段？
+
+> - 请求头
+>   - cache-control：是否使用缓存
+>   - Connection：keep-alive 与服务器连接状态
+>   - Host：主机域
+> - 响应头
+>   - cache-control
+>   - etag：唯一标识，缓存用的
+>   - last-modified：最后修改时间
