--- a/协议.md
+++ b/协议.md
@@ -65,7 +65,7 @@
 >
 > - 301：永久移动。浏览器会自动定向到新的url地址
 > - 302：临时移动。客户端继续使用原有的url
-> - 304：not modified未修改。所请求的资源未修改，服务器返回该状态码时，不会返回任何资源。
+> - 304：not modified。未修改，所请求的资源未修改，服务器返回该状态码时，不会返回任何资源。
 >
 > 4xx：客户端错误相关响应状态码
 >
@@ -177,3 +177,12 @@
 >   - cache-control
 >   - etag：唯一标识，缓存用的
 >   - last-modified：最后修改时间
+
+#### 13.说一下http缓存？
+
+> http缓存分为强缓存和协商缓存
+>
+> - 强缓存
+>   - 在浏览器加载资源时，首先会看看cache-control里的max-age，判断数据是否过期，如果没有就直接使用该缓存，如果因为用户刷新了浏览器导致缓存过期，可以设置cache-control中的immutable
+> - 协商缓存（弱缓存）
+>   - 当浏览器加载资源没有命中强缓存时，浏览器向服务器发起请求，请求携带两个参数一个是响应头中的etag和last-modified，去检验缓存是否过期，没有过期就服务器会返回一个304状态码给浏览器，表示缓存没有过期，可以使用旧缓存。
