--- a/前端面试场景题.md
+++ b/前端面试场景题.md
@@ -190,7 +190,7 @@ Function.prototype._apply = function(context) {
 const _new = function() {
     // 创建一个对象
     const obj = {};
-    // 获取函数参数
+    // 取出第一个参数，即我们要传入的构造函数
     const fn = [...arguments].shift();
     // 将新对象的原型对象和构造参数的原型连接起来
     obj.__proto__ = fn.prototype;
@@ -233,3 +233,23 @@ const flatten = arr => {
 > 3.当函数再次触发，清除定时器
 >
 > 4.创建一个新的定时器即可
+>
+> ```js
+> function debounce(fn, delay) {
+>     let timer = null;
+>     
+>     const _debounce = funciton() {
+>         if(timer) clearTimeout(timer)
+>         let args = arguments;
+>         timer = setTimeout(()=> {
+>             // fn相当于一个逻辑代码
+>             fn.call(this, args);
+>             timer = null;
+>         }, delay)
+>     }
+>     
+>     return _debouce
+> }
+> ```
+>
+> 
