--- a/协议.md
+++ b/协议.md
@@ -165,7 +165,15 @@
 
 #### 11.说一下TCP和UDP的区别？
 
-> 
+> tcp面向连接，udp不需要连接
+>
+> tcp是可靠传输（一旦传输过程中丢包的话会进行重传），udp是不可靠传输
+>
+> udp实时性高，比tcp工作效率高
+>
+> tcp是点对点的，udp支持一对一，一对多，多对多
+>
+> tcp首部占20字节，udp首部占8字节
 
 #### 12.说一下http头都有哪些字段？
 
