--- a/前端面试场景题.md
+++ b/前端面试场景题.md
@@ -205,11 +205,15 @@ const _new = function() {
 
 ```js
 // 使用 concat + 递归 实现
-const flatten = arr => {
+const flatten = (arr, deep) => {
+    if(deep === 0) {
+        return arr;
+    }
+    
     let result = [];
     for(let i = 0; i < arr.length; i++) {
         if(Array.isArray(array[i])) {
-            result = result.concat(flatten(array[i]));
+            result = result.concat(flatten(array[i], deep -1));
         } else {
             result.push(array[i]);
         }
