--- a/前端面试场景题.md
+++ b/前端面试场景题.md
@@ -240,20 +240,45 @@ const flatten = arr => {
 >
 > ```js
 > function debounce(fn, delay) {
->     let timer = null;
->     
->     const _debounce = funciton() {
->         if(timer) clearTimeout(timer)
->         let args = arguments;
->         timer = setTimeout(()=> {
->             // fn相当于一个逻辑代码
->             fn.call(this, args);
->             timer = null;
->         }, delay)
->     }
->     
->     return _debouce
+>  let timer = null;
+> 
+>  const _debounce = funciton() {
+>      if(timer) clearTimeout(timer)
+>      let args = arguments;
+>      timer = setTimeout(()=> {
+>          // fn相当于一个逻辑代码
+>          fn.call(this, args);
+>          timer = null;
+>      }, delay)
+>  }
+> 
+>  return _debouce
 > }
 > ```
 >
-> 
+ ## 11.实现寄生组合式继承
+
+```js
+			function Human(name) {
+                this.name = name
+                this.kingdom = 'animal'
+                this.color = ['yellow', 'white', 'brown', 'black']
+            }
+            Human.prototype.getName = function() {
+                return this.name
+            }
+ 
+            function Chinese(name,age) {
+                Human.call(this, name)
+                this.age = age
+                this.color = 'yellow'
+            }
+            // 以下两行代码就已经可以实现继承
+            Chinese.prototype = new Human;
+            Chinese.prototype.constructor = Chinese;
+
+            Chinese.prototype.getAge = function() {
+                return this.age
+            }
+```
+
